2004-06-26  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (make_gaussian_map), (make_shadow), (shadow_picture),
	(solid_picture), (discard_ignore), (set_ignore), (should_ignore),
	(win_extents), (border_size), (paint_all), (repair_win), (map_win),
	(unmap_win), (get_opacity_prop), (determine_mode), (add_win),
	(destroy_win), (error), (main):
	Ok, this synchronizes all of my changes for the last many months.
	Has code to do server-based shadows (SHARP_SHADOW).
	Has code to try and ignore appropriate errors (helps somewhat).
	Has code to handle global window translucency.
	Lots of other minor changes.

2004-05-17  Eric Anholt  <anholt@FreeBSD.org>

	* configure.ac:
	Autoconf 2.57 appears to work fine, as well.

2004-03-31  Philip Blundell  <philb@gnu.org>

	* Makefile.am: Set INCLUDES, not xcompmgr_INCLUDES.

2004-03-28  Philip Blundell  <philb@gnu.org>

	* autogen.sh: New.

2004-03-25  Philip Blundell  <philb@gnu.org>

	Autotoolized:
	* Makefile.am, configure.ac: New files.
	* NEWS, README, AUTHORS: Likewise.
	* Makefile: Deleted.

2003-12-02  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (sum_gaussian), (make_shadow), (root_tile),
	(paint_all), (map_win), (unmap_win), (determine_mode),
	(configure_win), (circulate_win), (main):
	Track whether cliplists have changed and avoid computation when not.
	Shrink shadows.
	Speed up shadow construction a bit by using memset.
	Eliminate useless INTERVAL code.
	Use XSync after paint_all to gather more events per update.

2003-11-24  Matthew Hawn <hawnpawn@yahoo.com>

	reviewed by: Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (map_win), (unmap_win), (get_trans_prop),
	(determine_mode), (add_win), (main):
	Add support for CM_TRANSLUCENT property.

2003-11-23  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (make_shadow), (root_tile), (win_extents),
	(border_size), (paint_all), (repair_win), (map_win), (unmap_win),
	(add_win), (restack_win), (configure_win), (circulate_win),